# Xleth

./: .gitignore  ARCHITECTURE_AUDIT.md  AUDIT.md  BFDI 4_ Sweet Tooth.mp4.sfk  BUILD_DIAGNOSIS.md  BUILD_VERIFY.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CWINDOWSsystem32cmd.exe .txt  CWINDOWSsystem32cmd.exe.txt  CUsersKrasen.claudeplanspass-6g-plan.txt  DEP_AUDIT.md  ICON.ai  LMMS_ANALYSIS.md  PHASE 1 BUGS.md  PIANOROLLDIAGNOSTIC.md  XLETH.ai  XLETH_VS_LMMS_AUDIT.md  XlethEngine.exe.lnk  XlethSampler.jsx  bisect.bat  bridge_build_output.txt  build-portable.bat  build.bat  build_bridge_out.txt  build_log.txt  build_out.txt  build_output.txt  build_step7_output.txt  debug-report.skill  desktop.ini  midi-import-v1-spec.md  project.json  push.bat  render-1080p.bat  render-360p.bat  render-test.bat  start-designer.bat  start-ui.bat  (+12 more)
bridge/: CMakeLists.txt  _tmp_long_note.mid  package-lock.json  package.json  test_audio_telemetry.js  test_dynamics_viz.js  test_export_naming.cpp  test_fx_mode.js  test_midi_import.js  test_patterns.js  test_pdc_live_presentation_refresh.js  test_phase1.js  test_preview_seek_contract.js  test_proxy_status_smoke.js  test_resonancesuppressor.js  test_source_preview_contract.js  test_transport_contract.js
bridge/_test_patterns/: project.json
bridge/_test_project_phase1/: project.json
bridge/_tmp_audio_perf_capture/: xleth-audio-performance-2026-05-09-16_13_59-bridge-test.json  xleth-audio-performance-2026-05-09-16_13_59-bridge-test.md
bridge/_tmp_midi_probe/: project.json
bridge/src/: ExportNaming.h  XlethAddon.cpp
editor-host/: CMakeLists.txt
editor-host/src/: AudioPumpThread.cpp  AudioPumpThread.h  EditorHostMain.cpp
engine/: CMakeLists.txt
engine/include/: XlethEngineService.h
engine/sidecar/: sidecar_main.cpp
engine/src/: AudioEngine.cpp  AudioEngine.h  AudioScheduler.cpp  AudioScheduler.h  BuildIdentity.cpp  BuildIdentity.h  FrameCache.cpp  FrameCache.h  Main.cpp  ProxyTranscoder.cpp  ProxyTranscoder.h  SampleBank.cpp  SampleBank.h  SyncManager.cpp  SyncManager.h  Transport.cpp  Transport.h  TriggerQueue.h  VideoCompositor.cpp  VideoCompositor.h  VideoDecoder.cpp  VideoDecoder.h  VideoLayer.h  VoiceManager.cpp  VoiceManager.h  XlethDebug.h  XlethEngineService.cpp  XlethServiceJsonApi.h
engine/src/audio/: Arpeggiator.cpp  Arpeggiator.h  AudioGraph.cpp  AudioGraph.h  AudioPerformanceScenarioRunner.cpp  AudioPerformanceScenarioRunner.h  AudioPerformanceTelemetry.cpp  AudioPerformanceTelemetry.h  ChorusEffect.h  ClipFade.h  ClipModulatedReader.cpp  ClipModulatedReader.h  ClipRenderCache.cpp  ClipRenderCache.h  ClipVibratoIntegrator.cpp  ClipVibratoIntegrator.h  CompressorEffect.h  DelayCompensationProcessor.h  DistortionEffect.h  EditorProcessCoordinator.cpp  EditorProcessCoordinator.h  EffectChainManager.cpp  EffectChainManager.h  FlangerEffect.h  GraphEffectParameters.cpp  GraphEffectParameters.h  GuardedPluginWrapper.cpp  GuardedPluginWrapper.h  HermiteInterp.h  LimiterEffect.h  LoopTrap.h  MixEngine.cpp  MixEngine.h  NamedAudioRing.cpp  NamedAudioRing.h  OverdoneEffect.h  PhanjerEffect.h  PhaserEffect.h  PluginCrashGuard.h  PluginEditorHost.cpp  (+44 more)
engine/src/commands/: AddClipsBatchCommand.cpp  AddClipsBatchCommand.h  AddNotesBatchCommand.cpp  AddNotesBatchCommand.h  Command.h  ImportMidiCommand.cpp  ImportMidiCommand.h  QuantizeClipsBatchCommand.cpp  QuantizeClipsBatchCommand.h  TimelineCommands.cpp  TimelineCommands.h  UndoManager.cpp  UndoManager.h
engine/src/dsp/: DeclickEnvelope.cpp  DeclickEnvelope.h  PhaseVocoder.cpp  PhaseVocoder.h  RubberBandWrapper.cpp  RubberBandWrapper.h  TDPSOLA.cpp  TDPSOLA.h  WORLD.cpp  WORLD.h  WSOLA.cpp  WSOLA.h
engine/src/export/: AudioExporter.cpp  AudioExporter.h  ExportNaming.h  FFmpegMuxer.cpp  FFmpegMuxer.h
engine/src/import/: FscScoreParser.cpp  FscScoreParser.h
engine/src/midi/: GMDrumMap.h  MidiImporter.cpp  MidiImporter.h
engine/src/model/: Clip.cpp  Clip.h  ClipCompanionFxBuilder.cpp  ClipCompanionFxBuilder.h  ClipCompanionFxSnapshot.h  ClipModulationCompatibility.h  ClipModulationEvaluator.cpp  ClipModulationEvaluator.h  ClipVideoModulationTiming.cpp  ClipVideoModulationTiming.h  EnvelopeAhdsr.cpp  EnvelopeAhdsr.h  EnvelopeRuntime.cpp  EnvelopeRuntime.h  EnvelopeVoiceEvents.cpp  EnvelopeVoiceEvents.h  Pattern.cpp  Pattern.h  PatternBlock.cpp  PatternBlock.h  SampleRegion.cpp  SampleRegion.h  Timeline.cpp  Timeline.h  TimelineTypes.h  Track.cpp  Track.h  VideoFlipResolver.cpp  VideoFlipResolver.h
engine/src/project/: ProjectManager.cpp  ProjectManager.h  ProxyManager.cpp  ProxyManager.h
engine/src/render/: AnimationManager.cpp  AnimationManager.h  ArpVideoExpander.cpp  ArpVideoExpander.h  CanvasFit.h  FrameCache.cpp  FrameCache.h  FrameCollector.cpp  (+18 more)
engine/test/: FLIP_V2_TEST_COVERAGE.md  test_animation_manager.cpp  test_audio_perf_scenarios.cpp  test_audio_telemetry.cpp  test_canvas_fit.cpp  test_chain_effect_identity.cpp  test_clip_companion_fx_builder.cpp  test_clip_modulated_reader.cpp  test_clip_modulation_evaluator.cpp  test_clip_sr.cpp  test_clip_video_modulation_timing.cpp  test_compositor.cpp  test_distortion.cpp  test_effects.cpp  test_envelope_ahdsr.cpp  test_envelope_runtime.cpp  test_envelope_voice_events.cpp  test_envelope_voice_gain.cpp  test_flip_determinism.cpp  test_flip_orientation_golden.cpp  test_frame_cache.cpp  test_frame_collector.cpp  test_fsc_score_parser.cpp  test_fxgraph_sidechain_input.cpp  test_graph_effect_parameters.cpp  test_hw_detect.cpp  test_loop_region.cpp  test_midi_importer.cpp  test_mix.cpp  test_mixer_bus_routing.cpp  test_mixer_routing_pdc.cpp  test_muxer.cpp  test_offline_render.cpp  test_pdc_stage1.cpp  test_project.cpp  test_proxy.mov  test_real_render.cpp  test_render_decoder.cpp  test_render_scope.cpp  test_reverb.cpp  (+12 more)
engine/tools/: xleth_audio_perf_report.cpp  xleth_pdc_audible_diagnostic.cpp  xleth_pdc_real_signal_tap.cpp
scanner/: CMakeLists.txt
scanner/src/: ScannerMain.cpp
shm_helper/: CMakeLists.txt  package-lock.json  package.json  shm_helper.cpp
xleth-tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+789 files in other folders)
